# iChart-lite

./: .editorconfig  .gitignore  README.md  data_82.yaml  data_91.yaml  demo.py  ichart_lite.py  pyproject.toml  train.py
datasets/: train_82.txt  train_91.txt  val_82.txt  val_91.txt
datasets/images/: images.json
datasets/labels/: 002.txt  003.txt  004.txt  3D-bar-chart-object.txt  4-Bar-chart-showing-age-distribution-among-participants.txt  Bar Chart .txt  Bar Chart Count.txt  Bar Chart actuals.txt  Bar-Graph-Chart.txt  Bar-Graph-Example-1.txt  Bar-Graph-Example-2.txt  Bar-chart.txt  BarCategoricalXDataExample_01.txt  BarChart.txt  BarChartDefaultColors.txt  BarChart_MaritalStatus.txt  BarColorExample_01.txt  BarFaceandEdgeColorExample_01.txt  BarMarkSwift.BarMarkBarChart2x.txt  BarMarkSwift.BarMarkStackedBarChart2x.txt  BarWidthExample_01.txt  Column-chart-Serious-Crime-in-Cincinnati.txt  ControlIndividualBarColorsExample_01.txt  Depict-Data-Studio_Bar-Charts_Vertical-or-Horizontal_Vertical-1.txt  Depict-Data-Studio_Bar-Charts_Vertical-or-Horizontal_Vertical-2.txt  Histogram-Hypertension.txt  Histogram_Rel_Freq-Hypertension.txt  Practice-Problems-1.txt  Practice-Problems-2.txt  Practice-Problems-3.txt  RelativeFrequencyBarChart-AntiHTN.txt  RelativeFrequencyBarChart-AntiHTN_by_sex.txt  RelativeFrequencyBarChart-AntiHTN_by_sex_B.txt  RelativeFrequencyBarChart-AntiHTN_by_sex_C.txt  SingleDataSeriesExample_01.txt  Solved-Examples-2.txt  Solved-Examples-3.txt  bar-chart-example-1.txt  bar-chart-example-2.txt  bar-chart-example-3.txt  (+26 more)
